# cumulative-snow

./: .gitattributes  .gitignore  Pipfile  README.md  args.py  boston_logan.html  build_wasm.sh  download-by-station.sql  download.duckdb.sql  foo.py  label_lines.py  load_data.py  main.py  marimo_s3_parquet.py  plot.py  process_tarball.py  pyproject.toml  setup.py  update_samples.sh
.github/workflows/: publish_gh_page.yaml  test_and_publish.yaml
cumulative_snow/: args.py  label_lines.py  load_data.py  main.py  pd_util.py  plot.py
datasets/: boston_logan_snowfall.csv
observable-test/: README.md  observablehq.config.js  package-lock.json  package.json  tsconfig.json
observable-test/src/: example-dashboard.md  index.md
observable-test/src/components/: foo.ts  pyodide-lock.json
react-app/: components.json  package.json  tsconfig.app.json  vite.config.ts
react-app/src/: App.tsx  Plots.tsx  duckdb.ts  index.css  queries.ts
src/cumulative_snow/: args.py  load_data.py  main.py  plot.py
tests/: conftest.py  test_wasm_assertions.py
www/: boston.html
